Update 6. UNITS FOR MEASUREMENT.html

--- a/6. UNITS FOR MEASUREMENT.html
+++ b/6. UNITS FOR MEASUREMENT.html
@@ -149,7 +149,7 @@
 </div>
 
 <script>
-const Q = const Q = [
+const Q =  [
   {
     id: 'q1',
     text: "What is the SI unit of length?",
@@ -465,3 +465,4 @@ sendReport.onclick = () => {
 
 </body>
 </html>
+
